# lean-clean-campaign-generator

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  Makefile  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.sh
app/adapters/ai/: fake.py  openai_image.py  protocol.py
app/adapters/storage/: fake.py  minio.py  protocol.py
app/entities/: alert.py  approval.py  brand_summary.py  campaign_brief.py  creative_asset.py  validation_result.py
app/infrastructure/: config.py  factories.py
app/infrastructure/repositories/asset/: weaviate.py
app/infrastructure/repositories/brand/: in_memory.py  protocol.py  weaviate.py
app/interface_adapters/orchestrators/: campaign_orchestrator.py
app/interface_adapters/presenters/: campaign_presenter.py
app/use_cases/: generate_campaign_uc.py  validate_campaign_uc.py
docs/: presentation-fde.md  presentation-notes.md
drivers/cli/: __main__.py  commands.py
drivers/ui/streamlit/: Home.py  main.py  shared.py
drivers/ui/streamlit/pages/: 0_Upload_Seeds.py  1_Generate_Campaign.py  2_Upload_Seeds.py  3_Gallery.py
examples/: campaign-brief.yaml
tests/features/: test_localized_campaign.py
tests/use_cases/: test_generate_campaign_uc.py
tools/: create_seed_images.py  seed_brand.py
